# spotter-take-home

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  conftest.py  pyproject.toml  pytest.ini
backend/core/: settings.py  urls.py
backend/route_planner/: admin.py  apps.py  forms.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/route_planner/migrations/: 0001_initial.py  0002_fuelstationuploadjob.py
backend/route_planner/templates/admin/: index.html
backend/route_planner/templates/admin/route_planner/fuelstation/: change_list.html  upload_csv.html  upload_status.html
backend/route_planner/tests/: test_api.py  test_services.py  test_tasks.py
frontend/: .prettierignore  .prettierrc  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  vitest.d.ts
frontend/src/components/: index.ts
frontend/src/components/FuelStopsList/: FuelStopsList.test.tsx  index.tsx
frontend/src/components/RouteMap/: RouteMap.test.tsx  index.tsx
frontend/src/components/RoutePlannerForm/: RoutePlannerForm.test.tsx  index.tsx
frontend/src/hooks/: index.ts
frontend/src/hooks/route_planner/: hooks.ts  index.ts  service.ts  types.ts
frontend/src/test/: setup.ts
frontend/src/utils/: mapUtils.test.ts  mapUtils.ts
